# jsoncpp_perftests

./: .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
tests/common/: json_examples.cpp  json_examples.h  reader_cases.cpp  reader_cases.h  reader_cases_generator.h  reader_runner.cpp  reader_runner.h  value_cases_generator.h  value_runner.cpp  value_runner.h  writer_cases.cpp  writer_cases.h  writer_cases_generator.h  writer_runner.cpp  writer_runner.h
tests/googlebench/: bm_fast_writer.cpp  bm_fast_writer.h  bm_reader.cpp  bm_reader.h  bm_styled_stream_writer.cpp  bm_styled_stream_writer.h  bm_styled_writer.cpp  bm_styled_writer.h  googlebench_generator.h  main.cpp  reader.cpp  value.cpp  writer.cpp
tests/nonius/: main.cpp  nonius_generator.h  reader.cpp  value.cpp  writer.cpp
tests/sltbench/: fast_writer.cpp  reader.cpp  sltbench_generator.h  styled_stream_writer.cpp  styled_writer.cpp  value.cpp  writer.cpp
tools/: compare.py
tools/aux/: _compare.sh
